[gd_scene load_steps=32 format=2]

[ext_resource path="res://diagetics/barrier/lightning_barrier.gd" type="Script" id=1]
[ext_resource path="res://diagetics/barrier/frames/lightning_1.png" type="Texture" id=2]
[ext_resource path="res://diagetics/barrier/frames/lightning_2.png" type="Texture" id=3]
[ext_resource path="res://diagetics/barrier/frames/lightning_3.png" type="Texture" id=4]
[ext_resource path="res://diagetics/barrier/frames/lightning_4.png" type="Texture" id=5]
[ext_resource path="res://diagetics/barrier/frames/lightning_5.png" type="Texture" id=6]
[ext_resource path="res://diagetics/barrier/frames/lightning_6.png" type="Texture" id=7]
[ext_resource path="res://diagetics/barrier/frames/lightning_7.png" type="Texture" id=8]
[ext_resource path="res://diagetics/barrier/frames/lightning_8.png" type="Texture" id=9]
[ext_resource path="res://diagetics/barrier/frames/lightning_9.png" type="Texture" id=10]
[ext_resource path="res://diagetics/barrier/frames/lightning_10.png" type="Texture" id=11]
[ext_resource path="res://diagetics/barrier/frames/lightning_11.png" type="Texture" id=12]
[ext_resource path="res://diagetics/barrier/frames/lightning_12.png" type="Texture" id=13]
[ext_resource path="res://diagetics/barrier/frames/lightning_13.png" type="Texture" id=14]
[ext_resource path="res://diagetics/barrier/frames/lightning_14.png" type="Texture" id=15]
[ext_resource path="res://diagetics/barrier/frames/lightning_15.png" type="Texture" id=16]
[ext_resource path="res://diagetics/barrier/frames/lightning_16.png" type="Texture" id=17]
[ext_resource path="res://diagetics/barrier/frames/lightning_17.png" type="Texture" id=18]
[ext_resource path="res://diagetics/barrier/frames/lightning_18.png" type="Texture" id=19]
[ext_resource path="res://diagetics/barrier/frames/lightning_19.png" type="Texture" id=20]
[ext_resource path="res://diagetics/barrier/frames/lightning_20.png" type="Texture" id=21]
[ext_resource path="res://diagetics/barrier/frames/lightning_21.png" type="Texture" id=22]
[ext_resource path="res://diagetics/barrier/frames/lightning_22.png" type="Texture" id=23]
[ext_resource path="res://diagetics/barrier/frames/lightning_23.png" type="Texture" id=24]
[ext_resource path="res://diagetics/barrier/frames/lightning_24.png" type="Texture" id=25]
[ext_resource path="res://diagetics/barrier/frames/lightning_25.png" type="Texture" id=26]
[ext_resource path="res://diagetics/barrier/frames/lightning_26.png" type="Texture" id=27]
[ext_resource path="res://diagetics/barrier/frames/lightning_27.png" type="Texture" id=28]
[ext_resource path="res://diagetics/barrier/wall_rumble.ogg" type="AudioStream" id=29]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 50, 600 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "burn",
"speed": 15.0
} ]

[node name="lightning_barrier" type="Node2D"]

script = ExtResource( 1 )
player_path = null

[node name="hitbox" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox" index="0"]

shape = SubResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="." index="1"]

scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "burn"
_sections_unfolded = [ "Transform" ]

[node name="animated_sprite2" type="AnimatedSprite" parent="." index="2"]

scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "burn"
_sections_unfolded = [ "Transform" ]

[node name="animated_sprite_bot" type="AnimatedSprite" parent="." index="3"]

position = Vector2( 10.0702, 843.376 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "burn"
_sections_unfolded = [ "Transform" ]

[node name="animated_sprite_bot2" type="AnimatedSprite" parent="." index="4"]

position = Vector2( 10.0702, 843.376 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "burn"
_sections_unfolded = [ "Transform" ]

[node name="animated_sprite_top" type="AnimatedSprite" parent="." index="5"]

position = Vector2( -5.03503, -833.306 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "burn"
_sections_unfolded = [ "Transform" ]

[node name="animated_sprite_top2" type="AnimatedSprite" parent="." index="6"]

position = Vector2( -5.03503, -833.306 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "burn"
_sections_unfolded = [ "Transform" ]

[node name="rumble" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 29 )
volume_db = -15.0
autoplay = false
max_distance = 2000.0
attenuation = 3.03143
bus = "Master"
area_mask = 1


